@@ -76,7 +76,7 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-    © Michal Josef Špaček 2020-2021
+    © Michal Josef Špaček 2020-2022
 
     BSD 2-Clause License
 
